--- a/style.css
+++ b/style.css
@@ -227,7 +227,10 @@ h5{
 }
 @media (max-width:700px){
     .myform{
-        margin: 5% 15% 5% 15%;
+        margin: 5% 8% 5% 8%;
+    }
+    body{
+        padding:10px;
     }
 }
 
